--- a/Level-1(Limbo)/instrucciones.html
+++ b/Level-1(Limbo)/instrucciones.html
@@ -35,7 +35,7 @@
             </p>
         </section>
         <div class="options">
-            <a href="src/inicioJuego.html"><button class="button" style="vertical-align:middle"><span>Comenzar Aventura 👉</span></button></a>
+            <a href="inicioJuego.html"><button class="button" style="vertical-align:middle"><span>Comenzar Aventura 👉</span></button></a>
             <!-- <a href="/wilson_creditos/index.html"><button class="button" style="vertical-align:middle"><span>Asegurar tu salvación</span></button></a> -->
             <a href="Mecanica.html" target="_blank"><button class="button" style="vertical-align:middle"><span>Ver mecanica del juego 🦾🦿</span></button></a>
             <a href="index.html"><button class="button" style="vertical-align:middle"><span>Salir del juego ❌</span></button></a>
