--- a/Level-1(Limbo)/inicioJuego.html
+++ b/Level-1(Limbo)/inicioJuego.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="main.css">
     <title> Nivel 1</title>
     
@@ -29,7 +29,7 @@
     <canvas id="game"></canvas>
     
     <script src="index.js" type="module"></script>
-    <script src="../main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
 
